--- a/apps/nestjs/package.json
+++ b/apps/nestjs/package.json
@@ -24,7 +24,7 @@
     "@nestjs/serve-static": "^5.0.4",
     "@repo/auth": "workspace:*",
     "@repo/contract": "workspace:*",
-    "@repo/event-log": "workspace:*",
+    "@repo/audit-log": "workspace:*",
     "@repo/core": "workspace:*",
     "@repo/exception": "workspace:*",
     "@repo/key-vault": "workspace:*",
