--- a/packages/contract/package.json
+++ b/packages/contract/package.json
@@ -33,6 +33,7 @@
     "@repo/auth": "workspace:*",
     "@repo/core": "workspace:*",
     "@repo/utils": "workspace:*",
+    "@repo/pagination": "workspace:*",
     "@repo/virtual-authenticator": "workspace:*",
     "@ts-rest/core": "3.53.0-rc.1",
     "@ts-rest/open-api": "3.53.0-rc.1",
