--- a/apps/console/package.json
+++ b/apps/console/package.json
@@ -57,7 +57,8 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "ts-pattern": "^5.8.0",
-    "zod": "^4.1.12"
+    "zod": "^4.1.12",
+    "@repo/pagination": "workspace:*"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
