--- a/packages/audit-log/package.json
+++ b/packages/audit-log/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@repo/prisma": "workspace:*",
     "@repo/utils": "workspace:*",
+    "@repo/pagination": "workspace:*",
     "effect": "^3.19.4",
     "typanion": "^3.14.0",
     "zod": "^4.1.12"
