--- a/packages/pagination/package.json
+++ b/packages/pagination/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "@repo/utils",
+  "name": "@repo/pagination",
   "version": "0.0.0",
   "private": true,
   "type": "module",
   "exports": {
-    ".": "./src/index.ts"
+    ".": "./src/index.ts",
+    "./validation": "./src/validation/index.ts",
+    "./hooks": "./src/hooks/index.ts"
   },
   "scripts": {
     "test": "vitest run --config __tests__/vitest.config.ts",
@@ -17,7 +19,9 @@
     "@repo/types": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@repo/vitest-config": "workspace:*",
+    "@tanstack/react-table": "^8.21.3",
     "@types/node": "^22.5.2",
+    "@types/react": "^19",
     "type-fest": "^5.0.1",
     "typescript": "^5.5.4",
     "vitest": "^3.2.4"
@@ -25,5 +29,8 @@
   "dependencies": {
     "effect": "^3.19.4",
     "typanion": "^3.14.0"
+  },
+  "peerDependencies": {
+    "react": "19.1.0"
   }
 }
