--- a/apps/console/package.json
+++ b/apps/console/package.json
@@ -64,6 +64,7 @@
     "@eslint/eslintrc": "^3",
     "@repo/typescript-config": "workspace:*",
     "@repo/wxt": "workspace:*",
+    "@repo/virtual-authenticator": "workspace:*",
     "@standard-schema/spec": "^1.0.0",
     "@tailwindcss/postcss": "^4",
     "@types/lodash-es": "^4.17.12",
