--- a/apps/nestjs/package.json
+++ b/apps/nestjs/package.json
@@ -25,6 +25,7 @@
     "@repo/auth": "workspace:*",
     "@repo/contract": "workspace:*",
     "@repo/audit-log": "workspace:*",
+    "@repo/pagination": "workspace:*",
     "@repo/core": "workspace:*",
     "@repo/exception": "workspace:*",
     "@repo/key-vault": "workspace:*",
