--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@hono/node-server": "^1.19.5",
     "@repo/core": "workspace:*",
+    "@repo/pagination": "workspace:*",
     "@repo/eslint-config": "workspace:*",
     "@repo/types": "workspace:*",
     "@repo/typescript-config": "workspace:*",
