--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -5,10 +5,13 @@
   "private": true,
   "exports": {
     "./base": "./base.js",
-    "./nestjs": "./nestjs.js"
+    "./nestjs": "./nestjs.js",
+    "./nextjs": "./nextjs.js"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.34.0",
+    "@next/eslint-plugin-next": "^16.0.4",
     "eslint": "^9.34.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-only-warn": "^1.1.0",
