--- a/packages/keys/package.json
+++ b/packages/keys/package.json
@@ -9,7 +9,8 @@
     "./exceptions": "./src/exceptions/index.ts",
     "./mappers": "./src/mappers/index.ts",
     "./validation": "./src/validation/index.ts",
-    "./zod-validation": "./src/zod-validation/index.ts"
+    "./zod-validation": "./src/zod-validation/index.ts",
+    "./__tests__/helpers": "./__tests__/helpers/index.ts"
   },
   "scripts": {
     "build": "run-p barrel:*",
