--- a/packages/key-vault/package.json
+++ b/packages/key-vault/package.json
@@ -6,7 +6,7 @@
   "exports": {
     ".": "./src/index.ts",
     "./expcetions": "./src/expcetions/index.ts",
-    "./__tests__": "./__tests__/helpers/index.ts"
+    "./__tests__/helpers": "./__tests__/helpers/index.ts"
   },
   "scripts": {
     "test": "vitest run --config __tests__/vitest.integration.config.ts",
