--- a/packages/audit-log/package.json
+++ b/packages/audit-log/package.json
@@ -6,7 +6,8 @@
   "exports": {
     ".": "./src/index.ts",
     "./enums": "./src/enums/index.ts",
-    "./validation": "./src/validation/index.ts"
+    "./validation": "./src/validation/index.ts",
+    "./zod-validation": "./src/zod-validation/index.ts"
   },
   "scripts": {
     "test": "vitest run --config __tests__/vitest.config.ts",
