--- a/packages/contract/package.json
+++ b/packages/contract/package.json
@@ -7,12 +7,12 @@
     "./nestjs": "./src/nestjs/index.ts",
     "./auth-server": "./src/auth-server/index.ts",
     "./validation": "./src/validation/index.ts",
-    "./zod-validation": "./src/zod-validation/index.ts"
+    "./dto": "./src/dto/index.ts"
   },
   "scripts": {
     "build": "run-p barrel:* && pnpm generate:spec",
     "barrel:validation": "../../scripts/barrel.ts ./src/validation",
-    "barrel:zod-validation": "../../scripts/barrel.ts ./src/zod-validation",
+    "barrel:zod-validation": "../../scripts/barrel.ts ./src/dto",
     "test": "vitest run --config __tests__/vitest.config.ts",
     "lint": "eslint .",
     "check-types": "tsc --noEmit",
@@ -24,10 +24,13 @@
     "@repo/types": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@standard-schema/spec": "^1.0.0",
+    "@types/json-schema": "^7.0.15",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^22.5.2",
+    "openapi-types": "^12.1.3",
     "typescript": "^5.5.4",
-    "yaml": "^2.8.1"
+    "yaml": "^2.8.1",
+    "zod-to-ts": "^2.0.0"
   },
   "dependencies": {
     "@openapi-contrib/json-schema-to-openapi-schema": "^4.3.0",
