--- a/packages/pagination/package.json
+++ b/packages/pagination/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "exports": {
     ".": "./src/index.ts",
+    "./enums": "./src/enums/index.ts",
     "./validation": "./src/validation/index.ts",
     "./zod-validation": "./src/zod-validation/index.ts",
     "./hooks": "./src/hooks/index.ts"
@@ -21,6 +22,7 @@
     "@repo/typescript-config": "workspace:*",
     "@repo/vitest-config": "workspace:*",
     "@tanstack/react-table": "^8.21.3",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^22.5.2",
     "@types/react": "^19",
     "type-fest": "^5.0.1",
@@ -28,8 +30,10 @@
     "vitest": "^3.2.4"
   },
   "dependencies": {
+    "@repo/exception": "workspace:*",
     "@ngneat/falso": "^8.0.2",
     "effect": "^3.19.4",
+    "lodash-es": "^4.17.21",
     "typanion": "^3.14.0",
     "zod": "^4.1.12"
   },
