--- a/examples/nextjs/.env.development
+++ b/examples/nextjs/.env.development
@@ -6,7 +6,11 @@ NEXT_PUBLIC_API_BASE_URL=${API_BASE_URL}
 
 AUTH_BASE_URL="http://localhost:3002"
 
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/prisma?schema=public"
+DATABASE_URL="file:/Users/lewis-wow/Documents/Projects/diploma_thesis/examples/nextjs/prisma/dev.db"
+
+# Better Auth
+BETTER_AUTH_SECRET="your-secret-key-change-this-in-production"
+BETTER_AUTH_URL="http://localhost:3000"
 
 # https://github.com/settings/applications/3218560
 GITHUB_CLIENT_ID="Ov23liefjRRGHonCjBqs"
