--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -8,9 +8,15 @@
     "build": "next build --turbopack",
     "start": "pnpm dotenvx next start",
     "lint": "eslint",
-    "dotenvx": "../../scripts/dotenvx.sh"
+    "dotenvx": "../../scripts/dotenvx.sh",
+    "db:generate": "prisma generate",
+    "db:migrate": "prisma migrate dev",
+    "db:studio": "prisma studio",
+    "db:reset": "prisma migrate reset",
+    "setup": "prisma generate && prisma migrate dev"
   },
   "dependencies": {
+    "@better-auth/passkey": "^1.4.5",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.16.3",
     "@radix-ui/react-accordion": "^1.2.12",
@@ -26,7 +32,7 @@
     "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@repo/ui": "workspace:*",
-    "better-auth": "^1.3.27",
+    "better-auth": "^1.4.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -57,6 +63,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
+    "prisma": "^6.16.3",
     "tailwindcss": "^4.1.14",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
