--- a/examples/nextjs/.env.development
+++ b/examples/nextjs/.env.development
@@ -1,4 +1,4 @@
-PORT=3000
+PORT=4000
 BASE_URL="http://localhost:${PORT}"
 
 API_BASE_URL="http://localhost:3001"
@@ -10,7 +10,7 @@ DATABASE_URL="file:/Users/lewis-wow/Documents/Projects/diploma_thesis/examples/n
 
 # Better Auth
 BETTER_AUTH_SECRET="your-secret-key-change-this-in-production"
-BETTER_AUTH_URL="http://localhost:3000"
+BETTER_AUTH_URL=${BASE_URL}
 
 # https://github.com/settings/applications/3218560
 GITHUB_CLIENT_ID="Ov23liefjRRGHonCjBqs"
