--- a/examples/nextjs/.env.development
+++ b/examples/nextjs/.env.development
@@ -1,5 +1,5 @@
 PORT=4000
-BASE_URL="http://localhost:${PORT}"
+BASE_URL="http://localhost:4000"
 
 API_BASE_URL="http://localhost:3001"
 NEXT_PUBLIC_API_BASE_URL=${API_BASE_URL}
@@ -10,7 +10,8 @@ DATABASE_URL="file:/Users/lewis-wow/Documents/Projects/diploma_thesis/examples/n
 
 # Better Auth
 BETTER_AUTH_SECRET="your-secret-key-change-this-in-production"
-BETTER_AUTH_URL=${BASE_URL}
+BETTER_AUTH_URL="http://localhost:4000"
+NEXT_PUBLIC_BETTER_AUTH_URL="http://localhost:4000"
 
 # https://github.com/settings/applications/3218560
 GITHUB_CLIENT_ID="Ov23liefjRRGHonCjBqs"
