--- a/packages/browser/package.json
+++ b/packages/browser/package.json
@@ -17,15 +17,16 @@
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
+    "@repo/keys": "workspace:*",
     "@repo/types": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "typescript": "^5.5.4",
-    "@repo/keys": "workspace:*"
+    "typescript": "^5.5.4"
   },
   "dependencies": {
     "@repo/core": "workspace:*",
     "@repo/exception": "workspace:*",
     "@repo/virtual-authenticator": "workspace:*",
+    "buffer": "^6.0.3",
     "cbor2": "^2.0.1",
     "typanion": "^3.14.0",
     "zod": "^4.1.12"
