--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -54,8 +54,9 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@repo/typescript-config": "workspace:*",
     "@repo/eslint-config": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
+    "@simplewebauthn/server": "^13.2.2",
     "@tailwindcss/postcss": "^4",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^24.9.1",
