--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "pnpm dotenvx next dev --port 4000 --turbopack",
-    "build": "next build --turbopack",
+    "build": "pnpm db:generate db:generate && next build --turbopack",
     "start": "pnpm dotenvx next start",
     "lint": "eslint",
     "dotenvx": "../../scripts/dotenvx.sh",
