--- a/apps/auth-server/.env.development
+++ b/apps/auth-server/.env.development
@@ -13,7 +13,7 @@ JWT_ISSUER=${BASE_URL}
 JWT_AUDIENCE=${BASE_URL}
 
 # Crypto
-ENCRYPTION_KEY="secret"
+ENCRYPTION_KEY="secret-not-default"
 
 # Better auth
 TRUSTED_ORIGINS="${HONO_BASE_URL};${NEXTJS_BASE_URL}"
