--- a/apps/auth-server/.env.production
+++ b/apps/auth-server/.env.production
@@ -1,2 +1,25 @@
-PORT=3001
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/prisma?schema=public"
+# App
+PORT=3002
+BASE_URL="http://localhost:3002"
+
+HONO_BASE_URL="http://localhost:3002"
+NEXTJS_BASE_URL="http://localhost:3000"
+
+# Database
+DATABASE_URL="postgresql://postgres:postgres@postgres:5432/app?schema=public"
+
+# JWT
+JWT_ISSUER="http://localhost:3002"
+JWT_AUDIENCE="http://localhost:3001"
+
+# Crypto
+ENCRYPTION_KEY="secret-not-default-very-long-key-for-production-use-at-least-32-chars"
+
+# Better auth
+BETTER_AUTH_SECRET="secret-not-default-very-long-key-for-production-use-at-least-32-chars"
+TRUSTED_ORIGINS="http://localhost:3002;http://localhost:3000"
+
+# OAuth
+# https://github.com/settings/applications/3218560
+GITHUB_CLIENT_ID="Ov23liefjRRGHonCjBqs"
+GITHUB_CLIENT_SECRET="86678e1a387576cb026f4485564c06324c6ff553"
