--- a/apps/nestjs/.env.production
+++ b/apps/nestjs/.env.production
@@ -2,13 +2,13 @@
 PORT=3001
 BASE_URL="http://localhost:${PORT}"
 
-AUTH_SERVER_BASE_URL="http://localhost:3002"
+AUTH_SERVER_BASE_URL="http://auth-server:3002"
 
 # Database
-DATABASE_URL="postgresql://postgres:postgres@postgres:5432/prisma?schema=public"
+DATABASE_URL="postgresql://postgres:postgres@postgres:5432/app?schema=public"
 
 # Crypto
-ENCRYPTION_KEY="secret"
+ENCRYPTION_KEY="secret-not-default-very-long-key-for-production-use-at-least-32-chars"
 
 # Key vault
 NODE_TLS_REJECT_UNAUTHORIZED=0
