--- a/apps/nestjs/package.json
+++ b/apps/nestjs/package.json
@@ -41,7 +41,8 @@
     "qs": "^6.14.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "zod": "^4.1.12"
+    "zod": "^4.1.12",
+    "lodash-es": "^4.17.21"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.0",
@@ -62,7 +63,6 @@
     "@types/webpack-node-externals": "^3.0.4",
     "globals": "^16.0.0",
     "jose": "^6.1.0",
-    "lodash-es": "^4.17.21",
     "npm-run-all": "^4.1.5",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
