--- a/packages/proxy/package.json
+++ b/packages/proxy/package.json
@@ -15,9 +15,9 @@
   "devDependencies": {
     "@hono/node-server": "^1.19.5",
     "@repo/eslint-config": "workspace:*",
-    "@repo/vitest-config": "workspace:*",
     "@repo/types": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@repo/vitest-config": "workspace:*",
     "@types/node": "^22.5.2",
     "type-fest": "^5.0.1",
     "typescript": "^5.5.4",
@@ -28,6 +28,7 @@
     "@repo/exception": "workspace:*",
     "@repo/logger": "workspace:*",
     "@repo/prisma": "workspace:*",
+    "cookie": "^1.1.1",
     "hono": "^4.9.10",
     "typanion": "^3.14.0"
   }
