--- a/packages/proxy/package.json
+++ b/packages/proxy/package.json
@@ -13,11 +13,13 @@
     "check-types": "tsc --noEmit"
   },
   "devDependencies": {
+    "@hono/node-server": "^1.19.5",
     "@repo/eslint-config": "workspace:*",
     "@repo/types": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@repo/vitest-config": "workspace:*",
     "@types/node": "^22.5.2",
+    "hono": "^4.9.10",
     "type-fest": "^5.0.1",
     "typescript": "^5.5.4",
     "vitest": "^3.2.4"
