--- a/packages/proxy/package.json
+++ b/packages/proxy/package.json
@@ -15,10 +15,11 @@
   "devDependencies": {
     "@hono/node-server": "^1.19.5",
     "@repo/eslint-config": "workspace:*",
-    "@repo/vitest-config": "workspace:*",
     "@repo/types": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@repo/vitest-config": "workspace:*",
     "@types/node": "^22.5.2",
+    "hono": "^4.9.10",
     "type-fest": "^5.0.1",
     "typescript": "^5.5.4",
     "vitest": "^3.2.4"
@@ -28,7 +29,7 @@
     "@repo/exception": "workspace:*",
     "@repo/logger": "workspace:*",
     "@repo/prisma": "workspace:*",
-    "hono": "^4.9.10",
+    "cookie": "^1.1.1",
     "typanion": "^3.14.0"
   }
 }
