--- a/apps/auth-server/package.json
+++ b/apps/auth-server/package.json
@@ -13,6 +13,7 @@
     "@hono/standard-validator": "^0.1.5",
     "@repo/auth": "workspace:*",
     "@repo/activity-log": "workspace:*",
+    "@repo/env-config": "workspace:*",
     "@repo/contract": "workspace:*",
     "@repo/exception": "workspace:*",
     "@repo/logger": "workspace:*",
