--- a/apps/nestjs/package.json
+++ b/apps/nestjs/package.json
@@ -40,7 +40,8 @@
     "qs": "^6.14.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "zod": "^4.1.12"
+    "zod": "^4.1.12",
+    "@repo/env-config": "workspace:*"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.0",
