refactor env in wxt

--- a/apps/wxt/package.json
+++ b/apps/wxt/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@repo/auth": "workspace:*",
     "@repo/browser": "workspace:*",
+    "@repo/env-config": "workspace:*",
     "@repo/contract": "workspace:*",
     "@repo/core": "workspace:*",
     "@repo/ui": "workspace:*",
