--- a/packages/vitest-config/package.json
+++ b/packages/vitest-config/package.json
@@ -5,17 +5,21 @@
   "type": "module",
   "exports": {
     "./unit": "./src/unit.ts",
-    "./integration": "./src/integration.ts"
+    "./integration": "./src/integration.ts",
+    "./createIntegrationConfig": "./src/createIntegrationConfig.ts"
   },
   "scripts": {
     "lint": "eslint .",
     "check-types": "tsc --noEmit"
   },
+  "dependencies": {
+    "@dotenvx/dotenvx": "^1.51.0",
+    "vitest": "^3.2.4"
+  },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/node": "^22.5.2",
-    "typescript": "^5.5.4",
-    "vitest": "^3.2.4"
+    "typescript": "^5.5.4"
   }
 }
