--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -20,7 +20,8 @@
     "@types/node": "^22.5.2",
     "type-fest": "^5.0.1",
     "typescript": "^5.5.4",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "zod": "^4.1.12"
   },
   "dependencies": {
     "effect": "^3.19.4",
