--- a/packages/assert/package.json
+++ b/packages/assert/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@repo/crypto",
+  "name": "@repo/assert",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -7,24 +7,18 @@
     ".": "./src/index.ts"
   },
   "scripts": {
-    "test": "vitest run --config __tests__/vitest.config.ts",
-    "test:coverage": "vitest run --coverage --config __tests__/vitest.config.ts",
     "lint": "eslint .",
     "check-types": "tsc --noEmit"
+  },
+  "dependencies": {
+    "@repo/exception": "workspace:*"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/types": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@repo/vitest-config": "workspace:*",
     "@types/node": "^22.5.2",
-    "type-fest": "^5.0.1",
     "typescript": "^5.5.4",
-    "vitest": "^3.2.4"
-  },
-  "dependencies": {
-    "@repo/assert": "workspace:*",
-    "typanion": "^3.14.0",
     "zod": "^4.1.12"
   }
 }
