--- a/packages/keys/package.json
+++ b/packages/keys/package.json
@@ -32,6 +32,7 @@
     "vitest": "^3.2.4"
   },
   "dependencies": {
+    "@repo/assert": "workspace:*",
     "@repo/exception": "workspace:*",
     "@repo/utils": "workspace:*",
     "buffer": "^6.0.3",
