--- a/packages/virtual-authenticator/tsconfig.json
+++ b/packages/virtual-authenticator/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "@repo/typescript-config/base.json",
   "include": [
     "src",
+    "__tests__",
     "../key-vault/src/types",
     "../key-vault/src/CredentialSignerFactory.ts",
     "../types/src/CredentialSigner.ts",
