--- a/packages/key-vault/tsconfig.json
+++ b/packages/key-vault/tsconfig.json
@@ -1,5 +1,5 @@
 {
   "extends": "@repo/typescript-config/base.json",
-  "include": ["src", "../types/src/CredentialSigner.ts"],
+  "include": ["src", "__tests__"],
   "exclude": ["node_modules"]
 }
