--- a/packages/pagination/tsconfig.json
+++ b/packages/pagination/tsconfig.json
@@ -1,5 +1,5 @@
 {
   "extends": "@repo/typescript-config/base.json",
-  "include": ["src", "../shared-dts/zod.d.ts"],
+  "include": ["src", "__tests__", "../shared-dts/zod.d.ts"],
   "exclude": ["node_modules"]
 }
