--- a/apps/auth-server/package.json
+++ b/apps/auth-server/package.json
@@ -11,13 +11,14 @@
   "dependencies": {
     "@hono/node-server": "^1.19.5",
     "@hono/standard-validator": "^0.1.5",
-    "@repo/auth": "workspace:*",
     "@repo/activity-log": "workspace:*",
-    "@repo/env-config": "workspace:*",
+    "@repo/auth": "workspace:*",
     "@repo/contract": "workspace:*",
+    "@repo/env-config": "workspace:*",
     "@repo/exception": "workspace:*",
     "@repo/logger": "workspace:*",
     "@repo/prisma": "workspace:*",
+    "@repo/dependency-container": "workspace:*",
     "@t3-oss/env-core": "^0.13.8",
     "better-auth": "^1.3.27",
     "date-fns": "^4.1.0",
