--- a/apps/bff/.env.test
+++ b/apps/bff/.env.test
@@ -12,13 +12,8 @@ DATABASE_URL="postgresql://postgres:postgres@localhost:5432/prisma?schema=public
 JWT_ISSUER=${BASE_URL}
 JWT_AUDIENCE=${BASE_URL}
 
-# Crypto
-ENCRYPTION_KEY="secret"
-
 # Better auth
-# Extension origins use chrome-extension://* or moz-extension://* patterns
-# Using * to allow all extension IDs since they change during development
-TRUSTED_ORIGINS="${HONO_BASE_URL};${NEXTJS_BASE_URL};chrome-extension://*;moz-extension://*"
+TRUSTED_ORIGINS="${HONO_BASE_URL};${NEXTJS_BASE_URL}"
 
 # OAuth
 # https://github.com/settings/applications/3218560
