--- a/apps/wxt/package.json
+++ b/apps/wxt/package.json
@@ -17,14 +17,15 @@
   "dependencies": {
     "@repo/auth": "workspace:*",
     "@repo/browser": "workspace:*",
-    "@repo/env-config": "workspace:*",
     "@repo/contract": "workspace:*",
     "@repo/core": "workspace:*",
+    "@repo/env-config": "workspace:*",
     "@repo/ui": "workspace:*",
     "@repo/virtual-authenticator": "workspace:*",
     "@vitejs/plugin-react": "^5.1.1",
     "@webext-core/messaging": "^2.3.0",
     "@webext-core/proxy-service": "^1.2.1",
+    "better-auth": "^1.4.10",
     "effect": "^3.19.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
