--- a/apps/bff/package.json
+++ b/apps/bff/package.json
@@ -12,6 +12,7 @@
     "@hono/standard-validator": "^0.1.5",
     "@repo/activity-log": "workspace:*",
     "@repo/proxy": "workspace:*",
+    "@repo/utils": "workspace:*",
     "@repo/auth": "workspace:*",
     "@repo/contract": "workspace:*",
     "@repo/env-config": "workspace:*",
