--- a/apps/console/.env.development
+++ b/apps/console/.env.development
@@ -1,5 +1,7 @@
-PORT=3000
+PORT=3006
+NEXT_PUBLIC_PORT=${PORT}
 BASE_URL="http://localhost:${PORT}"
+NEXT_PUBLIC_BASE_URL=${BASE_URL}
 
 API_BASE_URL="http://localhost:3001"
 NEXT_PUBLIC_API_BASE_URL=${API_BASE_URL}
