--- a/apps/console/package.json
+++ b/apps/console/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "pnpm dotenvx next dev --turbopack",
+    "dev": "pnpm dotenvx next dev --turbopack -p 3006",
     "copy-deps": "copyfiles -f ../wxt/dist/Keyless.* public/generated/",
     "prebuild": "pnpm copy-deps",
     "build": "SKIP_ENV_VALIDATION=true next build --turbopack",
