use jwt fetcher

--- a/apps/bff/package.json
+++ b/apps/bff/package.json
@@ -11,15 +11,15 @@
     "@hono/node-server": "^1.19.5",
     "@hono/standard-validator": "^0.1.5",
     "@repo/activity-log": "workspace:*",
-    "@repo/proxy": "workspace:*",
-    "@repo/utils": "workspace:*",
     "@repo/auth": "workspace:*",
     "@repo/contract": "workspace:*",
+    "@repo/dependency-container": "workspace:*",
     "@repo/env-config": "workspace:*",
     "@repo/exception": "workspace:*",
     "@repo/logger": "workspace:*",
     "@repo/prisma": "workspace:*",
-    "@repo/dependency-container": "workspace:*",
+    "@repo/proxy": "workspace:*",
+    "@repo/utils": "workspace:*",
     "@t3-oss/env-core": "^0.13.8",
     "better-auth": "^1.3.27",
     "date-fns": "^4.1.0",
@@ -27,6 +27,7 @@
     "hono": "^4.9.10",
     "jose": "^6.1.0",
     "lodash-es": "^4.17.21",
+    "lru-cache": "^11.2.4",
     "zod": "^4.1.12"
   },
   "devDependencies": {
