--- a/apps/api-bff/package.json
+++ b/apps/api-bff/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@repo/bff",
+  "name": "@repo/api-bff",
   "type": "module",
   "scripts": {
     "dev": "pnpm dotenvx rollup -c --watch",
@@ -12,6 +12,7 @@
     "@hono/standard-validator": "^0.1.5",
     "@repo/activity-log": "workspace:*",
     "@repo/auth": "workspace:*",
+    "@repo/bff": "workspace:*",
     "@repo/contract": "workspace:*",
     "@repo/dependency-container": "workspace:*",
     "@repo/env-config": "workspace:*",
