--- a/apps/console/package.json
+++ b/apps/console/package.json
@@ -28,11 +28,17 @@
     "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@repo/auth": "workspace:*",
+    "@repo/bff": "workspace:*",
     "@repo/contract": "workspace:*",
     "@repo/core": "workspace:*",
+    "@repo/dependency-container": "workspace:*",
+    "@repo/env-config": "workspace:*",
+    "@repo/logger": "workspace:*",
+    "@repo/pagination": "workspace:*",
     "@repo/prisma": "workspace:*",
     "@repo/proxy": "workspace:*",
     "@repo/ui": "workspace:*",
+    "@repo/utils": "workspace:*",
     "@tanstack/react-query": "^5.90.5",
     "@tanstack/react-table": "^8.21.3",
     "@ts-rest/core": "^3.53.0-rc.1",
@@ -45,6 +51,7 @@
     "effect": "^3.19.4",
     "jose": "^6.1.0",
     "lodash-es": "^4.17.21",
+    "lru-cache": "^11.2.4",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
@@ -56,22 +63,19 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "ts-pattern": "^5.8.0",
-    "zod": "^4.1.12",
-    "@repo/pagination": "workspace:*",
-    "@repo/env-config": "workspace:*",
-    "@repo/utils": "workspace:*"
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@repo/typescript-config": "workspace:*",
+    "@repo/activity-log": "workspace:*",
     "@repo/eslint-config": "workspace:*",
-    "@repo/wxt": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
     "@repo/virtual-authenticator": "workspace:*",
+    "@repo/wxt": "workspace:*",
     "@standard-schema/spec": "^1.0.0",
     "@tailwindcss/postcss": "^4",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^24.9.1",
-    "@repo/activity-log": "workspace:*",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
