--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "exports": {
     ".": "./src/index.ts",
-    "./mappers": "./src/mappers/index.ts"
+    "./enums": "./src/enums/index.ts"
   },
   "scripts": {
     "build": "prisma generate",
