--- a/apps/api-bff/package.json
+++ b/apps/api-bff/package.json
@@ -2,8 +2,8 @@
   "name": "@repo/api-bff",
   "type": "module",
   "scripts": {
-    "dev": "pnpm dotenvx rollup -c --watch",
-    "build": "SKIP_ENV_VALIDATION=true rollup -c",
+    "dev": "NODE_OPTIONS='--import tsx' pnpm dotenvx rollup -c --watch",
+    "build": "SKIP_ENV_VALIDATION=true NODE_OPTIONS='--import tsx' rollup -c",
     "start": "pnpm dotenvx node dist/index.js",
     "dotenvx": "../../scripts/dotenvx.sh"
   },
@@ -14,6 +14,7 @@
     "@repo/auth": "workspace:*",
     "@repo/bff": "workspace:*",
     "@repo/contract": "workspace:*",
+    "@repo/core": "workspace:*",
     "@repo/dependency-container": "workspace:*",
     "@repo/env-config": "workspace:*",
     "@repo/exception": "workspace:*",
@@ -32,25 +33,14 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@repo/rollup-config": "workspace:*",
     "@repo/types": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@rollup/plugin-commonjs": "^28.0.6",
-    "@rollup/plugin-esm-shim": "^0.1.8",
-    "@rollup/plugin-json": "^6.1.0",
-    "@rollup/plugin-node-resolve": "^16.0.2",
-    "@rollup/plugin-run": "^3.1.0",
-    "@rollup/plugin-swc": "^0.4.0",
     "@simplewebauthn/server": "^13.2.2",
     "@swc/core": "^1.13.5",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.11.17",
     "rollup": "^4.52.4",
-    "rollup-plugin-copy": "^3.5.0",
-    "rollup-plugin-delete": "^3.0.1",
-    "rollup-plugin-execute": "^1.1.1",
-    "rollup-plugin-node-externals": "^8.1.1",
-    "rollup-plugin-shell": "^1.0.9",
-    "rollup-plugin-tsconfig-paths": "^1.5.2",
     "type-fest": "^5.0.1",
     "typescript": "^5.8.3",
     "vite-tsconfig-paths": "^5.1.4",
