--- a/packages/keys/package.json
+++ b/packages/keys/package.json
@@ -9,6 +9,7 @@
     "./cose/validation": "./src/cose/validation/index.ts",
     "./cose/exceptions": "./src/cose/exceptions/index.ts",
     "./cose/mappers": "./src/cose/mappers/index.ts",
+    "./cose/cbor": "./src/cose/cbor/index.ts",
     "./jwk": "./src/jwk/index.ts",
     "./jwk/enums": "./src/jwk/enums/index.ts",
     "./jwk/validation": "./src/jwk/validation/index.ts",
