--- a/packages/browser/tsconfig.json
+++ b/packages/browser/tsconfig.json
@@ -1,8 +1,7 @@
 {
   "extends": "@repo/typescript-config/base.json",
   "compilerOptions": {
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "types": []
+    "lib": ["DOM", "DOM.Iterable", "ESNext"]
   },
   "include": ["src", "__tests__"],
   "exclude": ["node_modules"]
