--- a/packages/virtual-authenticator/tsconfig.json
+++ b/packages/virtual-authenticator/tsconfig.json
@@ -1,13 +1,5 @@
 {
   "extends": "@repo/typescript-config/base.json",
-  "include": [
-    "src",
-    "__tests__",
-    "../key-vault/src/types",
-    "../key-vault/src/CredentialSignerFactory.ts",
-    "../types/src/CredentialSigner.ts",
-    "../core/src/mappers",
-    "../virtual-authenticator-parser/src/AttestationObjectParser.ts"
-  ],
+  "include": ["src", "__tests__"],
   "exclude": ["node_modules"]
 }
