--- a/packages/virtual-authenticator/tsconfig.json
+++ b/packages/virtual-authenticator/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "extends": "@repo/typescript-config/base.json",
-  "include": ["src", "__tests__"],
+  "include": [
+    "src",
+    "__tests__",
+    "../browser/src/VirtualAuthenticatorAgentClient.ts"
+  ],
   "exclude": ["node_modules"]
 }
