--- a/packages/virtual-authenticator/package.json
+++ b/packages/virtual-authenticator/package.json
@@ -12,11 +12,13 @@
     "./types": "./src/types/index.ts",
     "./repositories": "./src/repositories/index.ts",
     "./cbor": "./src/cbor/index.ts",
+    "./dto": "./src/dto/index.ts",
     "./__tests__/helpers": "./__tests__/helpers/index.ts"
   },
   "scripts": {
     "build": "run-p barrel:*",
     "barrel:validation": "../../scripts/barrel.ts ./src/validation",
+    "barrel:dto": "../../scripts/barrel.ts ./src/dto",
     "test": "vitest run --config __tests__/vitest.config.ts",
     "test:coverage": "vitest run --coverage --config __tests__/vitest.config.ts",
     "test:integration": "vitest run --config __tests__/vitest.integration.config.ts",
