--- a/packages/virtual-authenticator/tsconfig.json
+++ b/packages/virtual-authenticator/tsconfig.json
@@ -1,9 +1,5 @@
 {
   "extends": "@repo/typescript-config/base.json",
-  "include": [
-    "src",
-    "__tests__",
-    "../browser/src/VirtualAuthenticatorAgentClient.ts"
-  ],
+  "include": ["src", "__tests__"],
   "exclude": ["node_modules"]
 }
