--- a/packages/browser/package.json
+++ b/packages/browser/package.json
@@ -7,7 +7,9 @@
     ".": "./src/index.ts",
     "./zod-validation": "./src/zod-validation/index.ts",
     "./mappers": "./src/mappers/index.ts",
-    "./standard-impl": "./src/standard-impl/index.ts"
+    "./standard-impl": "./src/standard-impl/index.ts",
+    "./main-world": "./src/main-world/index.ts",
+    "./background": "./src/background/index.ts"
   },
   "scripts": {
     "build": "run-p barrel:*",
