--- a/apps/nestjs/.env.development
+++ b/apps/nestjs/.env.development
@@ -11,3 +11,6 @@ DATABASE_URL="postgresql://postgres:postgres@localhost:5432/prisma?schema=public
 NODE_TLS_REJECT_UNAUTHORIZED=0
 AZURE_KEY_VAULT_BASE_URL="https://localhost:3443"
 AZURE_POD_IDENTITY_AUTHORITY_HOST="http://localhost:3080"
+
+# JWKS
+ENCRYPTION_KEY="secret"
