--- a/packages/virtual-authenticator/package.json
+++ b/packages/virtual-authenticator/package.json
@@ -41,6 +41,7 @@
     "vitest-mock-extended": "^3.1.0"
   },
   "dependencies": {
+    "@repo/http": "workspace:*",
     "@repo/assert": "workspace:*",
     "@repo/crypto": "workspace:*",
     "@repo/exception": "workspace:*",
