--- a/packages/virtual-authenticator/package.json
+++ b/packages/virtual-authenticator/package.json
@@ -13,6 +13,8 @@
     "./repositories": "./src/repositories/index.ts",
     "./cbor": "./src/cbor/index.ts",
     "./dto": "./src/dto/index.ts",
+    "./http": "./src/http/index.ts",
+    "./interactions": "./src/interactions/index.ts",
     "./__tests__/helpers": "./__tests__/helpers/index.ts"
   },
   "scripts": {
