--- a/packages/keys/package.json
+++ b/packages/keys/package.json
@@ -27,11 +27,11 @@
     "check-types": "tsc --noEmit"
   },
   "devDependencies": {
-    "@repo/vitest-config": "workspace:*",
     "@repo/core": "workspace:*",
     "@repo/eslint-config": "workspace:*",
     "@repo/types": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@repo/vitest-config": "workspace:*",
     "type-fest": "^5.0.1",
     "typescript": "^5.5.4",
     "vitest": "^3.2.4"
@@ -43,6 +43,7 @@
     "buffer": "^6.0.3",
     "cbor2": "^2.0.1",
     "effect": "^3.19.4",
+    "jose": "^6.1.0",
     "ts-pattern": "^5.8.0",
     "zod": "^4.1.12"
   }
