--- a/packages/keys/tsconfig.json
+++ b/packages/keys/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "extends": "@repo/typescript-config/base.json",
+  "compilerOptions": {
+    "lib": ["es2022"]
+  },
   "include": ["src", "__tests__"],
   "exclude": ["node_modules"]
 }
