--- a/packages/keys/package.json
+++ b/packages/keys/package.json
@@ -4,20 +4,9 @@
   "private": true,
   "type": "module",
   "exports": {
-    "./cose": "./src/cose/index.ts",
-    "./cose/enums": "./src/cose/enums/index.ts",
-    "./cose/validation": "./src/cose/validation/index.ts",
-    "./cose/exceptions": "./src/cose/exceptions/index.ts",
-    "./cose/mappers": "./src/cose/mappers/index.ts",
-    "./cose/cbor": "./src/cose/cbor/index.ts",
-    "./jwk": "./src/jwk/index.ts",
-    "./jwk/enums": "./src/jwk/enums/index.ts",
-    "./jwk/validation": "./src/jwk/validation/index.ts",
-    "./jwk/exceptions": "./src/jwk/exceptions/index.ts",
-    "./shared": "./src/shared/index.ts",
-    "./shared/enums": "./src/shared/enums/index.ts",
-    "./shared/exceptions": "./src/shared/exceptions/index.ts",
-    "./shared/mappers": "./src/shared/mappers/index.ts",
+    ".": "./src/index.ts",
+    "./enums": "./src/cose/enums/index.ts",
+    "./exceptions": "./src/cose/exceptions/index.ts",
     "./__tests__/helpers": "./__tests__/helpers/index.ts"
   },
   "scripts": {
