--- a/packages/keys/package.json
+++ b/packages/keys/package.json
@@ -5,8 +5,9 @@
   "type": "module",
   "exports": {
     ".": "./src/index.ts",
-    "./enums": "./src/cose/enums/index.ts",
-    "./exceptions": "./src/cose/exceptions/index.ts",
+    "./enums": "./src/enums/index.ts",
+    "./exceptions": "./src/exceptions/index.ts",
+    "./validation": "./src/validation/index.ts",
     "./__tests__/helpers": "./__tests__/helpers/index.ts"
   },
   "scripts": {
