--- a/packages/browser/package.json
+++ b/packages/browser/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@repo/core": "workspace:*",
+    "@repo/keys": "workspace:*",
     "@repo/utils": "workspace:*",
     "@repo/exception": "workspace:*",
     "@repo/virtual-authenticator": "workspace:*",
