--- a/packages/exception/package.json
+++ b/packages/exception/package.json
@@ -25,6 +25,7 @@
     "vitest": "^3.2.4"
   },
   "dependencies": {
-    "zod": "^4.1.12"
+    "zod": "^4.1.12",
+    "@repo/http": "workspace:*"
   }
 }
