--- a/packages/virtual-authenticator/package.json
+++ b/packages/virtual-authenticator/package.json
@@ -14,7 +14,7 @@
     "./cbor": "./src/cbor/index.ts",
     "./dto": "./src/dto/index.ts",
     "./http": "./src/http/index.ts",
-    "./interactions": "./src/interactions/index.ts",
+    "./interruption": "./src/interruption/index.ts",
     "./__tests__/helpers": "./__tests__/helpers/index.ts"
   },
   "scripts": {
